fix words on fewer lines

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ title: Represent Boundaries
                 --><div class="column-one-of-four">
                     <img src="assets/img/benefits-c.jpg" alt="">
                     <h3>Match it to an area</h3>
-                    <p>Send the coordinates to the <a href="{{ site.baseurl }}/docs/reference/">Represent Boundaries API</a> to find the geographic area that covers their location.</p>
+                    <p>Send the coordinates to Represent Boundaries to find the geographic area that covers their location.</p>
                 </div><!--
                 --><div class="column-one-of-four">
                     <img src="assets/img/benefits-d.jpg" alt="" class="img-borderless">
                     <h3>Display relevant content</h3>
-                    <p>Invite supporters to take local actions, show readers stories from a local election race, or build “email your elected official” advocacy campaigns.</p>
+                    <p>Invite supporters to take local actions, show readers stories from a local election race, or build “email your elected official” campaigns.</p>
                 </div>
             </div>
         </div>
