Use HTTPS for Represent

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ title: Represent Boundaries
                 </div><!--
                 --><div class="column-one-of-four">
                     <img src="assets/img/represent.opennorth.ca.jpg" alt="">
-                    <h3><a href="http://represent.opennorth.ca/">Represent</a></h3>
-                    <p><a href="http://represent.opennorth.ca/">Open North</a>'s API powers the online email campaigns of Canada's largest nonprofits and unions.</p>
+                    <h3><a href="https://represent.opennorth.ca/">Represent</a></h3>
+                    <p><a href="https://represent.opennorth.ca/">Open North</a>'s API powers the online email campaigns of Canada's largest nonprofits and unions.</p>
                 </div><!--
                 --><div class="column-one-of-four">
                     <img src="assets/img/ancfinder.org.jpg" alt="">
@@ -118,7 +118,7 @@ title: Represent Boundaries
             <div class="grid-row">
                 <div class="column-one-of-two">
                     <h3>Canada</h3>
-                    <p><a href="http://represent.opennorth.ca/">represent.opennorth.ca</a> by <a href="http://represent.opennorth.ca/">Open North</a> is the most comprehensive source for electoral districts in Canada, including all provinces and nearly 400 municipalities. It's used by some of Canada's largest nonprofits and labor unions. <a href="http://represent.opennorth.ca/demo/">Try out the demo</a> or re-use its <a href="https://github.com/opennorth/represent-canada/">open-source code</a>.</p>
+                    <p><a href="https://represent.opennorth.ca/">represent.opennorth.ca</a> by <a href="https://represent.opennorth.ca/">Open North</a> is the most comprehensive source for electoral districts in Canada, including all provinces and nearly 400 municipalities. It's used by some of Canada's largest nonprofits and labor unions. <a href="https://represent.opennorth.ca/demo/">Try out the demo</a> or re-use its <a href="https://github.com/opennorth/represent-canada/">open-source code</a>.</p>
                 </div><!--
                 --><div class="column-one-of-two">
                     <h3>United States</h3>
