use https links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Represent Boundaries
                 --><div class="column-one-of-four">
                     <img src="assets/img/benefits-b.png" alt="">
                     <h3>Collect a user's address</h3>
-                    <p>Use any geocoding API like <a href="https://developers.google.com/maps/documentation/geocoding/">Google</a> or <a href="http://msdn.microsoft.com/en-us/library/ff701715.aspx">Bing</a> to transform their address to a latitude and longitude.</p>
+                    <p>Use any geocoding API like <a href="https://developers.google.com/maps/documentation/geocoding/">Google</a> or <a href="https://msdn.microsoft.com/en-us/library/ff701715.aspx">Bing</a> to transform their address to a latitude and longitude.</p>
                 </div><!--
                 --><div class="column-one-of-four">
                     <img src="assets/img/benefits-c.jpg" alt="">
@@ -83,13 +83,13 @@ title: Represent Boundaries
             <div class="grid-row">
                 <div class="column-one-of-four">
                     <img src="assets/img/govtrack.us.jpg" alt="">
-                    <h3><a href="http://www.govtrack.us/">GovTrack.us</a></h3>
+                    <h3><a href="https://www.govtrack.us/">GovTrack.us</a></h3>
                     <p>GovTrack.us helps millions of Americans easily track the activities of the United States Congress.</p>
                 </div><!--
                 --><div class="column-one-of-four">
                     <img src="assets/img/openstates.org.jpg" alt="">
                     <h3><a href="http://openstates.org/">OpenStates.org</a></h3>
-                    <p>Open States by the <a href="http://sunlightfoundation.com/">Sunlight Foundation</a> allows anyone to track lawmaking in their US state.</p>
+                    <p>Open States by the <a href="https://sunlightfoundation.com/">Sunlight Foundation</a> allows anyone to track lawmaking in their US state.</p>
                 </div><!--
                 --><div class="column-one-of-four">
                     <img src="assets/img/represent.opennorth.ca.jpg" alt="">
