--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ title: Represent Boundaries
 <div class="final-call-to-action">
     <div class="container">
         <h2>Represent Boundaries is free and open-source</h2>
-        <a href="/docs/" class="button--primary">Get started</a>
+        <a href="{{ site.baseurl }}/docs/" class="button--primary">Get started</a>
         <p>Need help implementing Represent Boundaries? Contact us at <a href="mailto:represent@opennorth.ca">represent@opennorth.ca</a>.</p>
     </div>
 </div>
